<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout android:layout_width="match_parent"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_big"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/txt_0"
            android:layout_alignStart="@id/logo_img"
            android:layout_below="@id/logo_img"
            android:layout_marginStart="15dp"
            android:text="@string/show_material_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#797979"/>

        <Button
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txt_0"
            android:id="@+id/progress_dialog"
            style="@style/dialog_blue_button"
            android:layout_margin="10dp"
            android:text="@string/try_me"/>

        <TextView
            android:id="@+id/txt_1"
            android:layout_alignStart="@id/logo_img"
            android:layout_below="@id/progress_dialog"
            android:layout_marginStart="15dp"
            android:text="@string/a_basic_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#797979"/>

        <Button
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txt_1"
            android:id="@+id/basic_test"
            style="@style/dialog_blue_button"
            android:layout_margin="10dp"
            android:text="@string/try_me"/>

        <TextView
            android:id="@+id/txt_2"
            android:layout_alignStart="@id/logo_img"
            android:layout_below="@id/basic_test"
            android:layout_marginStart="15dp"
            android:text="@string/a_title_with_a_text_under"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:textColor="#797979"/>

        <Button
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txt_2"
            android:id="@+id/under_text_test"
            style="@style/dialog_blue_button"
            android:layout_margin="10dp"
            android:text="@string/try_me"/>

        <TextView
            android:id="@+id/txt_3"
            android:layout_alignStart="@id/logo_img"
            android:layout_below="@id/under_text_test"
            android:layout_marginStart="15dp"
            android:text="@string/show_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:textColor="#797979"/>

        <Button
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txt_3"
            android:id="@+id/error_text_test"
            style="@style/dialog_blue_button"
            android:layout_margin="10dp"
            android:text="@string/try_me"/>

        <TextView
            android:id="@+id/txt_4"
            android:layout_alignStart="@id/logo_img"
            android:layout_below="@id/error_text_test"
            android:layout_marginStart="15dp"
            android:text="@string/a_success_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:textColor="#797979"/>

        <Button
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txt_4"
            android:id="@+id/success_text_test"
            style="@style/dialog_blue_button"
            android:layout_margin="10dp"
            android:text="@string/try_me"/>


        <TextView
            android:id="@+id/txt_5"
            android:layout_alignStart="@id/logo_img"
            android:layout_below="@id/success_text_test"
            android:layout_marginStart="15dp"
            android:text="@string/a_warning_message_with_a_listener_bind_to_the_confirm_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:textColor="#797979"/>

        <Button
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txt_5"
            android:id="@+id/warning_confirm_test"
            style="@style/dialog_blue_button"
            android:layout_margin="10dp"
            android:text="@string/try_me"/>

        <TextView
            android:id="@+id/txt_6"
            android:layout_alignStart="@id/logo_img"
            android:layout_below="@id/warning_confirm_test"
            android:layout_marginStart="15dp"
            android:text="@string/a_warning_message_with_listeners_bind_to_cancel_and_confirm_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:textColor="#797979"/>

        <Button
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txt_6"
            android:id="@+id/warning_cancel_test"
            style="@style/dialog_blue_button"
            android:layout_margin="10dp"
            android:text="@string/try_me"/>

        <TextView
            android:id="@+id/txt_7"
            android:layout_alignStart="@id/logo_img"
            android:layout_below="@id/warning_cancel_test"
            android:layout_marginStart="15dp"
            android:text="@string/a_message_with_a_custom_icon"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:textColor="#797979"/>

        <Button
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txt_7"
            android:id="@+id/custom_img_test"
            style="@style/dialog_blue_button"
            android:layout_margin="10dp"
            android:text="@string/try_me"/>

    </RelativeLayout>
</ScrollView>

